welcome.lessons.welcome.instructions.InstructionsDrawG.scala.error
Source:2: error: not found: type blue
setCouleurCorps(c:blue)
                  ^Source:2: error: not found: value c
setCouleurCorps(c:blue)
                ^